--- a/__ workspace __/.vscode/launch.json
+++ b/__ workspace __/.vscode/launch.json
@@ -4,9 +4,9 @@
         {
             "name": "Launch",
             "request": "launch",
-            "program": "ninety_nine.exe",
+            "program": "bin/ninety_nine.exe",
             "args": [],
-            "cwd": "${workspaceFolder}/../bin",
+            "cwd": "${workspaceFolder}/..",
             "stopAtEntry": false,
             "externalConsole": true,
             "type": "cppvsdbg",
